--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import Header from '@components/header.astro';
+import Header from '@components/Header.astro';
 
 interface Props {
 	title: string;
