--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,73 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+// import Layout from '../layouts/Layout.astro';
+import { links } from "@utils/constants/socials";
+import Layout from "@layout";
+
+import Badge from "@components/Badge.astro";
+import SocialPill from "@components/SocialPill.astro";
+import Experience from "@components/Experience.astro";
+import Container from "@components/Container.astro";
+
+import GithubIcon from "@icons/Github.astro";
+import LinkedinIcon from "@icons/Linkedin.astro";
+import EmailIcon from "@icons/Mail.astro";
+
+const { linkedin, github, email } = links;
+
+const socials = [
+  {
+    path: linkedin,
+    title: "LinkedIn",
+    iconComponent: LinkedinIcon,
+  },
+  {
+    path: github,
+    title: "Github",
+    iconComponent: GithubIcon,
+  },
+  {
+    path: email,
+    title: email.slice(7),
+    iconComponent: EmailIcon,
+  },
+];
 ---
 
-<Layout title='Leo Torres | Portfolio'>
-	<main></main>
-</Layout>
+<Layout title="Leo Torres | Portfolio ">
+  <Container>
+    <div class="mb-6">
+      <h1
+        class="mb-6 flex items-center justify-start gap-x-2 text-4xl font-bold tracking-wide text-gray-100 md:mb-8 md:text-6xl lg:gap-x-5"
+      >
+        Hi, I'm Leo.
+        <a href={linkedin} target="_blank" rel="noopener" class="flex">
+          <Badge>Open to Work!</Badge>
+        </a>
+      </h1>
+      <h3 class="text-2xl font-semibold text-gray-200 md:text-3xl">
+        <span
+          class="bg-gradient-to-r from-indigo-600 to-green-500 bg-clip-text text-transparent"
+          >Frontend Developer</span
+        >. +2 Years Experience. Passionate about technology and code. I like to
+        learn about new things for the web.
+      </h3>
+    </div>
 
-<style></style>
+    <nav class="flex items-center gap-x-4">
+      {
+        socials.map((item) => (
+          <SocialPill path={item.path}>
+            <item.iconComponent customClass="size-5" />
+            {item.title}
+          </SocialPill>
+        ))
+      }
+    </nav>
+  </Container>
+
+  <Container>
+    <Experience />
+  </Container>
+
+  <style></style>
+</Layout>
