--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,12 +3,11 @@ import ExperienceItem from "./ExperienceItem.astro";
 
 const EXPERIENCE = [
   {
-    date: "Actualmente...",
-    title: "Creador de Contenido",
-    company: "Twitch",
+    date: "Current work",
+    title: "Web Developer",
+    company: "SMBS",
     description:
-      "Divulgo sobre programación y desarrollo web en diferentes plataformas. Galardonado como mejor creador de contenido de habla no-inglesa en 2022 y mejor comunidad en 2023 por GitHub.",
-    link: "https://twitch.tv/midudev",
+      "I have collaborated in the development of different projects, as a creator of components and utilities for web applications and building their own APIs. Also I worked with web scraping using Python.",
   },
 ];
 ---
