--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -1,5 +1,13 @@
 ---
-const { title, description, date, link } = Astro.props;
+interface Props {
+  title: string;
+  company?: string;
+  description?: string;
+  date: string;
+  link?: string;
+}
+
+const { title, company, description, date, link } = Astro.props;
 ---
 
 <div
@@ -8,14 +16,17 @@ const { title, description, date, link } = Astro.props;
 </div>
 <time
   class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
-  >February 2022</time
+  >{date}</time
 >
-<h3 class="text-lg font-semibold text-gray-900 dark:text-white">
-  Application UI code in Tailwind CSS
+<h3
+  class="text-lg font-semibold text-yellow-200 dark:text-white tracking-wide mb-1"
+>
+  {title} ➖ {company}
 </h3>
-<p class="mb-4 text-base font-normal text-gray-500 dark:text-gray-400">
-  Get access to over 20+ pages including a dashboard layout, charts, kanban
-  board, calendar, and pre-order E-commerce & Marketing pages.
+<p
+  class="mb-4 text-base font-normal text-gray-400 dark:text-gray-400 text-pretty"
+>
+  {description}
 </p>
 {
   link && (
