--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,13 +4,14 @@ import { links } from "@utils/constants/socials";
 import Layout from "@layout";
 
 import Badge from "@components/Badge.astro";
-import SocialPill from "@components/SocialPill.astro";
-import Experience from "@components/Experience.astro";
 import Container from "@components/Container.astro";
+import Experience from "@components/Experience.astro";
+import SocialPill from "@components/SocialPill.astro";
 
+import BriefcaseIcon from "@icons/Briefcase.astro";
+import EmailIcon from "@icons/Mail.astro";
 import GithubIcon from "@icons/Github.astro";
 import LinkedinIcon from "@icons/Linkedin.astro";
-import EmailIcon from "@icons/Mail.astro";
 
 const { linkedin, github, email } = links;
 
@@ -33,24 +34,25 @@ const socials = [
 ];
 ---
 
-<Layout title="Leo Torres | Portfolio ">
-  <Container>
+<Layout title="Leo Torres | Frontend Developer">
+  <Container id="about">
     <div class="mb-6">
       <h1
-        class="mb-6 flex items-center justify-start gap-x-2 text-4xl font-bold tracking-wide text-gray-100 md:mb-8 md:text-6xl lg:gap-x-5"
+        class="mb-6 flex items-center justify-start gap-x-2 text-4xl font-bold text-gray-100 md:mb-8 md:text-6xl lg:gap-x-5"
       >
         Hi, I'm Leo.
         <a href={linkedin} target="_blank" rel="noopener" class="flex">
           <Badge>Open to Work!</Badge>
         </a>
       </h1>
-      <h3 class="text-2xl font-semibold text-gray-200 md:text-3xl">
+      <h3 class="text-2xl font-semibold text-gray-200 md:text-3xl mb-3">
         <span
           class="bg-gradient-to-r from-indigo-600 to-green-500 bg-clip-text text-transparent"
           >Frontend Developer</span
         >. +2 Years Experience. Passionate about technology and code. I like to
         learn about new things for the web.
       </h3>
+      <p class="text-sm">Managua, Nicaragua.</p>
     </div>
 
     <nav class="flex items-center gap-x-4">
@@ -65,7 +67,7 @@ const socials = [
     </nav>
   </Container>
 
-  <Container>
+  <Container title="Experience" id="experience">
     <Experience />
   </Container>
 
