--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,6 +21,7 @@
     >
       <a href="#home">Home</a>
       <a href="#about">About</a>
+      <a href="#experience">Experience</a>
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
