chore: little changes to components

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -9,10 +9,17 @@ const EXPERIENCE = [
     description:
       "I have collaborated in the development of different projects, as a creator of components and utilities for web applications and building their own APIs. Also I worked with web scraping using Python.",
   },
+  {
+    date: "Current work",
+    title: "Web Developer",
+    company: "SMBS",
+    description:
+      "I have collaborated in the development of different projects, as a creator of components and utilities for web applications and building their own APIs. Also I worked with web scraping using Python.",
+  },
 ];
 ---
 
-<ol class="relative border-s border-gray-200 dark:border-gray-700">
+<ol class="relative border-s border-gray-200 dark:border-gray-700 ml-3">
   {
     EXPERIENCE.map((experience) => (
       <li class="mb-10 ms-4">
