--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -15,11 +15,11 @@ const { title, company, description, date, link } = Astro.props;
 >
 </div>
 <time
-  class="mb-1 text-sm font-normal leading-none text-gray-400 dark:text-gray-500"
+  class="mb-1 text-sm font-normal leading-none text-gray-500 dark:text-gray-600"
   >{date}</time
 >
 <h3
-  class="text-lg font-semibold text-yellow-200 dark:text-white tracking-wide mb-1"
+  class="text-lg font-semibold text-yellow-200 dark:text-white tracking-wide mb-1 mt-3"
 >
   {title} ➖ {company}
 </h3>
