--- a/src/components/SocialPill.astro
+++ b/src/components/SocialPill.astro
@@ -3,10 +3,10 @@ const { path } = Astro.props;
 ---
 
 <a
-  href=`${path}`
+  href={path}
   target="_blank"
   rel="noopener"
-  class="rounded-full border border-white/10 flex justify-center items-center gap-x-2 py-2 px-3 bg-white/5 hover:bg-white/10 hover:scale-105 transition-all"
+  class="rounded-full border border-white/10 flex justify-center items-center gap-x-2 py-2 px-3 bg-white/5 hover:bg-white/10 hover:scale-105 transition-all max-sm:px-2 max-sm:py-2"
 >
   <slot />
 </a>
