--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "@components/Footer.astro";
 import Header from "@components/Header.astro";
 import "@fontsource-variable/onest";
 
@@ -26,9 +27,10 @@ const { title } = Astro.props;
     </div>
 
     <Header />
-    <main class="container mx-auto px-4 py-28">
+    <main class="container mx-auto px-4 py-28 lg:px-8">
       <slot />
     </main>
+    <Footer />
   </body>
 </html>
 
