styles: remove max width from container header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -27,7 +27,7 @@ const sections = [
 
 <header class="relative" id="home">
   <div
-    class="container max-w-[1400px] mx-auto flex w-full items-center justify-center px-2 py-2 sm:px-4 sm:py-3 lg:px-8 lg:py-4 md:justify-between"
+    class="container mx-auto flex w-full items-center justify-center px-2 py-2 sm:px-4 sm:py-3 lg:px-8 lg:py-4 md:justify-between"
   >
     <div
       class="hidden rounded-full bg-gradient-to-br from-indigo-600 to-green-500 p-[3px] md:block"
