--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,18 +3,24 @@ import ExperienceItem from "./ExperienceItem.astro";
 
 const EXPERIENCE = [
   {
-    date: "Current work",
+    date: "Jan 2023 - Jul 2024",
     title: "Web Developer",
-    company: "SMBS",
-    description:
-      "I have collaborated in the development of different projects, as a creator of components and utilities for web applications and building their own APIs. Also I worked with web scraping using Python.",
+    company: "Smart Business Solutions (SMBS)",
+    jobFunctions: [
+      "Collaborated on a Cloud project, developing scalable user interface components using Angular",
+      "Developed static pages using Vue.js",
+      "Contributed to a scraping project using Python",
+      "Developed an informative web application using React",
+    ],
   },
   {
-    date: "Current work",
-    title: "Web Developer",
-    company: "SMBS",
-    description:
-      "I have collaborated in the development of different projects, as a creator of components and utilities for web applications and building their own APIs. Also I worked with web scraping using Python.",
+    date: "Jul 2022 - Dec 2022",
+    title: "Web Developer | Intern",
+    company: "Smart Business Solutions (SMBS)",
+    jobFunctions: [
+      "Developed web applications using Nextjs",
+      "Developed APIs using Node.js and NestJS",
+    ],
   },
 ];
 ---
