--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,6 @@
 ---
 const sections = [
   {
-    id: "#home",
-    title: "Home",
-  },
-  {
     id: "#about",
     title: "About",
   },
@@ -16,16 +12,12 @@ const sections = [
     id: "#projects",
     title: "Projects",
   },
-  {
-    id: "#contact",
-    title: "Contact",
-  },
 ];
 
 
 ---
 
-<header class="relative" id="home">
+<header class="sticky top-2 z-10" id="home">
   <div
     class="container mx-auto flex w-full items-center justify-center px-2 py-2 sm:px-4 sm:py-3 lg:px-8 lg:py-4 md:justify-between"
   >
