--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -6,6 +6,7 @@ import EmailIcon from "@icons/Mail.astro";
 import GithubIcon from "@icons/Github.astro";
 import LinkedinIcon from "@icons/Linkedin.astro";
 import SocialPill from "./SocialPill.astro";
+import Paperclip from "./icons/Paperclip.astro";
 
 const { linkedin, github, email } = links;
 
@@ -37,17 +38,18 @@ const socials = [
       <Badge>Open to Work!</Badge>
     </a>
   </h1>
-  <h3 class="text-2xl font-semibold text-gray-200 md:text-3xl mb-3">
+  <h3 class="text-xl font-semibold text-gray-200 md:text-3xl mb-3">
     <span
       class="bg-gradient-to-r from-indigo-600 to-green-500 bg-clip-text text-transparent"
       >Frontend Developer</span
-    >. +2 Years Experience. Passionate about technology and code. I like to
-    learn about new things for the web.
+    >
+    . +2 Years Experience. Passionate about technology and code. I like to learn
+    about new things for the web.
   </h3>
   <p class="text-sm">Managua, Nicaragua.</p>
 </div>
 
-<nav class="flex items-center gap-x-4 flex-wrap gap-y-3">
+<nav class="flex items-center gap-x-4 flex-wrap gap-y-3 mb-6">
   {
     socials.map((item) => (
       <SocialPill path={item.path}>
@@ -57,3 +59,12 @@ const socials = [
     ))
   }
 </nav>
+
+<a
+  download="CV - Leonardo_Torres"
+  href={"pdfs/Leonardo_Torres-en.pdf"}
+  class="p-2 bg-gradient-to-br text-sm from-cyan-600 to-emerald-500 rounded-xl hover:from-cyan-600/90 hover:to-emerald-500/90 transition-colors text-white font-semibold flex items-center justify-center gap-x-1 uppercase tracking-wider shadow-2xl shadow-cyan-600 animate-pulse-slow sm:w-[150px]"
+>
+  Resume
+  <Paperclip customClass="size-4" />
+</a>
