--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -10,8 +10,8 @@ const { customClass, title, id } = Astro.props;
 
 <section
   id={id}
-  class=`mb-20 mx-auto w-full max-w-[1200px] ${customClass ?? ''}`
+  class=`mb-20 md:mb-36 mx-auto w-full max-w-[1200px] ${customClass ?? ''}`
 >
-  {title && <h2 class="text-4xl md:text-6xl font-bold mb-6"> {title}</h2>}
+  {title && <h2 class="text-3xl md:text-5xl font-bold mb-6"> {title}</h2>}
   <slot />
 </section>
