--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,7 +1,8 @@
----
-
----
-
-<footer class="py-20 bg-white w-full">
-  <h2 class="text-black">From Footer</h2>
+<footer class="rounded-lg shadow m-4 bg-black w-full relative">
+  <div class="w-fit mx-auto p-4 flex flex-col gap-y-1">
+    <span class="text-sm text-center text-gray-400"
+      >© 2023. Made with Love. 💚
+    </span>
+    <span class="text-sm text-center text-gray-400">By Leo Torres.</span>
+  </div>
 </footer>
