--- a/src/layout/Layout.astro
+++ b/src/layout/Layout.astro
@@ -20,14 +20,14 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-zinc-900">
+  <body class="bg-zinc-950">
     <div
       class="absolute top-0 z-[-2] min-h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"
     >
     </div>
 
     <Header />
-    <main class="container mx-auto px-4 py-28 lg:px-8">
+    <main class="container mx-auto px-4 py-14 md:py-28 lg:px-8">
       <slot />
     </main>
     <Footer />
