--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -44,7 +44,8 @@ const socials = [
       >Frontend Developer</span
     >
     . +2 Years Experience. Passionate about technology and code. I like to learn
-    about new things for the web.
+    about new things for the web. I usually work with React, TypeScript and Node
+    for backend.
   </h3>
   <p class="text-sm">Managua, Nicaragua.</p>
 </div>
