update name resume

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -62,8 +62,8 @@ const socials = [
 </nav>
 
 <a
-  download="CV - Leonardo_Torres"
-  href={"pdfs/Leonardo_Torres-en.pdf"}
+  download="CV - Leonardo Torres"
+  href={"pdfs/CV - Leonardo Torres - en.pdf"}
   class="p-2 bg-gradient-to-br text-sm from-cyan-600 to-emerald-500 rounded-xl hover:from-cyan-600/90 hover:to-emerald-500/90 transition-colors text-white font-semibold flex items-center justify-center gap-x-1 uppercase tracking-wider shadow-2xl shadow-cyan-600 animate-pulse-slow sm:w-[150px]"
 >
   Resume
