--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,5 +8,15 @@ const year = new Date().getFullYear();
       >© {year}. Made with Love. 💚
     </span>
     <span class="text-sm text-center text-gray-400">By Leo Torres.</span>
+    <span class="text-sm text-center text-gray-400">
+      credits to
+      <a
+        href="https://www.youtube.com/@midulive"
+        target="_blank"
+        class="underline underline-offset-2 text-yellow-200"
+      >
+        @midulive
+      </a>
+    </span>
   </div>
 </footer>
