--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const year = new Date().getFullYear();
 ---
 
-<footer class="rounded-lg shadow m-4 bg-black w-full relative">
+<footer class="bg-black w-full">
   <div class="w-fit mx-auto p-4 flex flex-col gap-y-1">
     <span class="text-sm text-center text-gray-400"
       >© {year}. Made with Love. 💚
