--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -61,7 +61,7 @@ const PROJECTS = [
               href={project.github}
               target="_blank"
             >
-              <Github customClass="size-5 hover:opacity-80 hover:scale-105 transition-all delay-100" />
+              <Github customClass="size-5 hover:opacity-80 hover:scale-105 transition-all delay-100 text-gray-200" />
             </a>
           </div>
           <p class="text-white/80 text-base leading-snug">
