--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,8 @@ import Projects from "@components/Projects.astro";
 
   <Container id="projects">
     <div class="flex gap-x-2 md:gap-x-4 items-center mb-6">
-      <Code customClass="size-9 md:mt-2" />
-      <h2 class="text-3xl md:text-5xl font-bold">Projects</h2>
+      <Code customClass="size-9 md:mt-2 text-white" />
+      <h2 class="text-3xl md:text-5xl font-bold text-gray-100">Projects</h2>
     </div>
     <Projects />
   </Container>
