--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -38,7 +38,7 @@ const socials = [
       <Badge>Open to Work!</Badge>
     </a>
   </h1>
-  <h3 class="text-xl font-semibold text-gray-200 md:text-3xl mb-3">
+  <p class="text-xl font-semibold text-gray-200 md:text-3xl mb-4">
     <span
       class="bg-gradient-to-r from-indigo-600 to-green-500 bg-clip-text text-transparent"
       >Frontend Developer</span
@@ -46,7 +46,13 @@ const socials = [
     . +2 Years Experience. Passionate about technology and code. I like to learn
     about new things for the web. I usually work with React, TypeScript and Node
     for backend.
-  </h3>
+  </p>
+  <p
+    class="text-xl font-semibold text-gray-200 md:text-[28px] leading-[1.3] mb-4"
+  >
+    In my free time, I really enjoy spending time with my family and friends. I
+    also like to play video games. 🎮
+  </p>
   <p class="text-sm text-gray-400">Managua, Nicaragua.</p>
 </div>
 
