fix url on projects

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -44,9 +44,9 @@ const PROJECTS = [
   {
     PROJECTS.map((project) => (
       <article class="rounded-md bg-gray-800/90 hover:bg-gray-700/80 max-w-[350px] w-full overflow-hidden shadow-2xl shadow-white/15">
-        <a href="https://github.com/torres-leo/Uptask_MERN-Frontend" class="">
+        <a href={project.link} class="">
           <img
-            class="rounded-t-md bg-cover bg-center hover:scale-90 transition-all duration-500 ease-in-out h-52 w-full"
+            class="rounded-t-md bg-cover bg-center hover:scale-95 transition-all duration-500 ease-in-out h-52 w-full"
             src={project.image}
             alt={`project ${project.title}`}
           />
