--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,7 +3,15 @@ import ExperienceItem from "./ExperienceItem.astro";
 
 const EXPERIENCE = [
   {
-    date: "Jan 2023 - Jul 2024",
+    date: "Aug 2024 - Oct 2024",
+    title: "Frontend Developer | Freelancer",
+    company: "Upwork / IdeaPort LLC",
+    jobFunctions: [
+      "Responsible for designing and developing user interfaces for a government system using React.js",
+    ],
+  },
+  {
+    date: "Jul 2023 - Jun 2024",
     title: "Web Developer",
     company: "Smart Business Solutions (SMBS)",
     jobFunctions: [
@@ -11,13 +19,6 @@ const EXPERIENCE = [
       "Developed static pages using Vue.js",
       "Contributed to a scraping project using Python",
       "Developed an informative web application using React",
-    ],
-  },
-  {
-    date: "Jul 2022 - Dec 2022",
-    title: "Web Developer | Intern",
-    company: "Smart Business Solutions (SMBS)",
-    jobFunctions: [
       "Developed web applications using Nextjs",
       "Developed APIs using Node.js and NestJS",
     ],
