--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -43,9 +43,8 @@ const socials = [
       class="bg-gradient-to-r from-indigo-600 to-green-500 bg-clip-text text-transparent"
       >Frontend Developer</span
     >
-    . +3 Years Experience. Passionate about technology and code. I like to learn
-    about new things for the web. I usually work with React, TypeScript and Node
-    for backend.
+    +3 Years Experience. Passionate about technology and code. I like to learn about
+    new things for the web. I usually work with React, TypeScript and Node for backend.
   </p>
   <p
     class="text-xl font-semibold text-gray-200 md:text-[28px] leading-[1.3] mb-4"
