update title page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Code from "@components/icons/Code.astro";
 import Projects from "@components/Projects.astro";
 ---
 
-<Layout title="Leo Torres | Frontend Developer">
+<Layout title="Leo Torres | FullStack Developer">
   <Container id="about">
     <About />
   </Container>
